--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,37 +5,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_Assignment"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Assignment" />
-        <item
             android:id="@+id/nav_Calendar"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Calendar" />
-        <item
-            android:id="@+id/nav_Events"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Events" />
-        <item
-            android:id="@+id/nav_Tools"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Tools" />
-        <item
-            android:id="@+id/nav_Manage"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Manage" />
+            android:title="@string/menu_Calendar" />
         <item
-            android:id="@+id/nav_Reports"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Reports" />
+            android:id="@+id/nav_Schedules"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_Schedules" />
         <item
-            android:id="@+id/nav_Documents"
+            android:id="@+id/nav_ScheduleTypes"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Documents" />
+            android:title="@string/menu_ScheduleTypes" />
+        <item
+            android:id="@+id/nav_Map"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_Map" />
         <item
             android:id="@+id/nav_About"
             android:icon="@drawable/ic_menu_slideshow"
@@ -47,11 +31,11 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
+                android:title="@string/menu_Share" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:title="@string/menu_Send" />
         </menu>
     </item>
 
